--- a/view/manager.ejs
+++ b/view/manager.ejs
@@ -60,7 +60,7 @@
   <section id="received_list" class="panel panel-default">
     <div class="panel-heading">
       <lable >Received List</label>
-      <input id="datepicker1" name="datepicker1" class="form-control" type="text" style="width:160px;display:inline-block;margin-left:550px" />
+      <input id="datepicker" name="datepicker" class="form-control" type="text" style="width:160px;display:inline-block;margin-left:550px" />
     </div>
     <div id="div_received_list"></div>
   </section>
