change icon in viewing mail from ? to x

--- a/view/manager.ejs
+++ b/view/manager.ejs
@@ -73,7 +73,7 @@
   <div class="modal-dialog" id="modal-dialog" style="display: inline-block; width: auto; min-width:500px;">
     <div class="modal-content" style="text-align: left;">
       <div class="modal-header">
-        <a class="close" data-dismiss="modal">×</a>
+        <a class="close" data-dismiss="modal">x</a>
         <h4 class="modal-title" id="myModalLabel">Mail</h4>
       </div>
       <div class="modal-body">
