--- a/view/manager.ejs
+++ b/view/manager.ejs
@@ -69,18 +69,18 @@
     <div id="div_unsent_list"></div>  
   </section>
 
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="text-align: center;">
-  <div class="modal-dialog" id="modal-dialog" style="display: inline-block; width: auto; min-width:500px;">
+  <div class="modal fade" id="modal-show-mail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="text-align: center;">
+  <div class="modal-dialog" id="modal-dialog" >
     <div class="modal-content" style="text-align: left;">
       <div class="modal-header">
         <a class="close" data-dismiss="modal">x</a>
-        <h4 class="modal-title" id="myModalLabel">Mail</h4>
+        <h4 class="modal-title" id="mymodallabel">mail</h4>
       </div>
       <div class="modal-body">
-        <p id="email">Loading...</p>
+        <p id="email">loading...</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">close</button>
       </div>
     </div>
   </div>
