--- a/view/user.ejs
+++ b/view/user.ejs
@@ -72,8 +72,8 @@
     <div id="div_sent_list"></div>
   </section>
   
-  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="text-align: center;">
-    <div class="modal-dialog" id="modal-dialog" style="display: inline-block; width: auto; min-width:500px; ">
+  <div class="modal fade" id="modal-show-mail" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="text-align: center;">
+    <div class="modal-dialog" id="modal-dialog" >
       <div class="modal-content" style="text-align: left;">
         <div class="modal-header">
           <a class="close" data-dismiss="modal">x</a>
