add send mail response and reminder
response immediately after send mail and add send anyway option if
subject is empty

--- a/view/editor.ejs
+++ b/view/editor.ejs
@@ -84,13 +84,12 @@
     <div class="modal-content" style="text-align: left;">
       <div class="modal-header">
         <a class="close" data-dismiss="modal">×</a>
-        <h4 class="modal-title" id="myModalLabel">Warning</h4>
+        <h4 class="modal-title" id="send_title"></h4>
       </div>
       <div class="modal-body">
-        <p id="tip_context">Release, domain and subject should not be empty. Please check !</p>
+        <p id="tip_context"></p>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <div class="modal-footer" id ="tip_button">
       </div>
     </div>
   </div>
