--- a/view/manager.ejs
+++ b/view/manager.ejs
@@ -37,8 +37,8 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Recieved</a></li>
         <!--li><a href="#">Sent</a></li>
-        <li><a href="#">Recieved</a></li>
-        <li><a href="/doc">Help</a></li-->
+        <li><a href="#">Recieved</a></li-->
+        <li><a href="/doc">Documentation</a></li>
         <!--
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create <b class="caret"></b></a>
