--- a/view/user.ejs
+++ b/view/user.ejs
@@ -36,7 +36,7 @@
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Sent</a></li>
         <li><a href="#">Recieved</a></li>
-        <li><a href="/doc">Help</a></li>
+        <li><a href="/doc">Documentation</a></li>
         <!--
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create <b class="caret"></b></a>
