--- a/view/doc.ejs
+++ b/view/doc.ejs
@@ -29,13 +29,20 @@
     <p class="lead">Please visit <a href="http://isempty.com/tpc/report">http://isempty.com/tpc/report</a></p>
    
     <h1 class="page-header">Release Note</h1>
+    <h3 class="page-header">Release 1.6.0 <small>2014.10.15</small></h3>
+    <ul>
+      <li>Draft funciton is online.</li>
+      <li>Add CK-SOC,HT-BCEM and HT-SOC platforms to related platforms options in daily report.</li>
+      <li>Display platform location infomation in manager unsent list.</li>
+      <li>Adjust the user navigation bar.</li>
+    </ul>
     <h3 class="page-header">Release 1.5.3 <small>2014.09.26</small></h3>
     <ul>
       <li>Add dialog in sending mail.</li>
       <li>Show sending receipt after sending mail.</li>
       <li>'Domain' and 'Release' are not allowed empty.</li>
       <li>Sending tips when subject is empty.</li>
-      <li>Enhance the mail header in  mail show dialog.</li>
+      <li>Enhance the mail header in mail show dialog.</li>
       <li>Add 'END', 'FAD' in 'domain option'.</li>
     </ul>
     <h3 class="page-header">Release 1.5.2 <small>2014.09.24</small></h3>
