--- a/view/doc.ejs
+++ b/view/doc.ejs
@@ -31,9 +31,9 @@
     <h1 class="page-header">Release Note</h1>
     <h3 class="page-header">Release 1.6.0 <small>2014.10.15</small></h3>
     <ul>
-      <li>Draft funciton is online.</li>
+      <li>Draft function is online.</li>
       <li>Add CK-SOC,HT-BCEM and HT-SOC platforms to related platforms options in daily report.</li>
-      <li>Display platform location infomation in manager unsent list.</li>
+      <li>Display platform location information in manager unsent list.</li>
       <li>Adjust the user navigation bar.</li>
     </ul>
     <h3 class="page-header">Release 1.5.3 <small>2014.09.26</small></h3>
